--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,14 @@
 {
-  "name": "Optic'App",
-  "short_name": "OpticApp",
-  "start_url": "index.html",
-  "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
-  "icons": [
-    {
-      "src": "logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "logo.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "dir": "ltr",
+  "display": "standalone",
+  "name": "Optic'app",
+  "orientation": "any",
+  "scope": "/",
+  "short_name": "Opl",
+  "start_url": "/",
+  "theme_color": "#ffffff",
+  "id": "Optic'App",
+  "description": "logiciel Opticien",
+  "lang": "fr"
 }
