--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,36 @@
 {
-  "background_color": "#ffffff",
+  "name": "Optic'App",
+  "short_name": "Opl",
+  "description": "Logiciel Opticien - Optic'App",
+  "lang": "fr",
   "dir": "ltr",
   "display": "standalone",
-  "name": "Optic'app",
   "orientation": "any",
-  "scope": "/",
-  "short_name": "Opl",
-  "start_url": "/",
-  "theme_color": "#ffffff",
-  "id": "Optic'App",
-  "description": "logiciel Opticien",
-  "lang": "fr"
+  "background_color": "#ffffff",
+  "theme_color": "#4361ee",
+  "start_url": "/opticien/index.html",
+  "scope": "/opticien/",
+  "id": "opticapp",
+  "icons": [
+    {
+      "src": "logo.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "logo.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "categories": ["business", "productivity"],
+  "shortcuts": [
+    {
+      "name": "Connexion",
+      "short_name": "Login",
+      "description": "Accéder à la page de connexion",
+      "url": "/opticien/code.html",
+      "icons": [{ "src": "logo.png", "sizes": "192x192" }]
+    }
+  ]
 }
